<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="rock">Rock</string>
    <string name="jannkenn">じゃんけん...</string>
    <string name="scissors">Scissors</string>
    <string name="paper">Paper</string>
    <string name="yourhand">yourHand</string>
    <string name="cpuhandimageview">CpuHandImageView</string>
    <string name="cpu">CPU</string>
    <string name="you">YOU</string>
    <string name="start">Start</string>
    <string name="registerRanking">ランキング登録</string>
    <string name="register">登録</string>
    <string name="userName">名前：</string>
    <string name="name">Name</string>
    <string name="goTitle">タイトルへ</string>
    <string name="show">表示</string>
</resources>
