<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterRankingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50sp"
        android:text="名前を入力して\nランキング登録をしよう！"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userName"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/ReturnTitleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="80sp"
        android:onClick="ReturnTitleButtonClicked"
        android:text="@string/goTitle"
        android:textSize="40sp" />

    <Button
        android:id="@+id/BrowserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50sp"
        android:layout_marginRight="50sp"
        android:layout_marginBottom="80sp"
        android:onClick="BrowserButtonClicked"
        android:text="@string/show"
        android:textSize="40sp" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout"
        android:layout_alignRight="@id/LinearLayout"
        android:onClick="RegisterButtonClicked"
        android:text="@string/register"
        android:textSize="40sp" />

</RelativeLayout>